[metadata]

name = OpenFAST
version = 0.0.1
url =  https://github.com/openfast/openfast
license = Apache V2.0
license_file = LICENSE

classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7


[options]
packages = find:
package_dir = =src

python_requires = >= 3.7

install_requires = 
    numpy

[options.packages.find]

where = src

[options.package_data]

OpenFAST = py.typed
